--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="src/scss/main.scss">
-    <title>React App</title>
+    <title>HelpPeople</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
